# smart-reviewer

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  review.sh  tags.yml
eval/: README.md  dataset.yml  judge_prompt.md  run_eval.py
src/: __init__.py  attachments.py  config.py  main.py
src/agent/: factory.py  litellm_patch.py
src/agent/prompts/: __init__.py  smart-code-reviewer-y7b4ip.md
src/agent/prompts/specialists/: correctness.md  maintainability.md  performance.md  security.md  testing.md  verification.md
src/tools/: browser.py  code_interpreter.py  github_pr.py  knowledge_base.py  mcp.py  memory.py  request_connection.py  share_file.py
static/: index.html
tests/: test_github_pr.py  test_smoke.py
